--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,37 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="/assets/style.css"/>
+    <!-- <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.js"></script>
+    <script src="/assets/script.js"></script> -->
+  
+    
+
+  
+  <!-- Owl stylesheet -->
+  <!-- <link rel="stylesheet" href="assets/owl-carousel/owl.carousel.css">
+  <link rel="stylesheet" href="assets/owl-carousel/owl.theme.css">
+  <script src="/assets/owl-carousel/owl.carousel.js"></script> -->
+  <!-- Owl stylesheet -->
+  
+  
+  <!-- slitslider -->
+      <link rel="stylesheet" type="text/css" href="/assets/slitslider/css/style.css" />
+      <link rel="stylesheet" type="text/css" href="/assets/slitslider/css/custom.css" />
+      <!-- <script type="text/javascript" src="/assets/slitslider/js/modernizr.custom.79639.js"></script>
+      <script type="text/javascript" src="/assets/slitslider/js/jquery.ba-cond.min.js"></script>
+      <script type="text/javascript" src="/assets/slitslider/js/jquery.slitslider.js"></script> -->
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel=""/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -39,5 +64,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link rel="stylesheet" href="./assets/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="./assets/owl-carousel/owl.theme.css">
+    <script src="./assets/owl-carousel/owl.carousel.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="./assets/bootstrap/js/bootstrap.js"></script>
+    <script src="./assets/script.js"></script>
+    <script type="text/javascript" src="./assets/slitslider/js/modernizr.custom.79639.js"></script>
+      <script type="text/javascript" src="./assets/slitslider/js/jquery.ba-cond.min.js"></script>
+      <script type="text/javascript" src="./assets/slitslider/js/jquery.slitslider.js"></script>
   </body>
 </html>
